--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "nodemon": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
+    "react-cookie": "^4.0.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
