--- a/package.json
+++ b/package.json
@@ -3,24 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
-    "history": "^4.7.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.8.2",
+    "firebaseui": "^4.4.0",
+    "history": "^4.10.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
-    "nodemon": "^1.19.0",
+    "live-server": "^1.2.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.19.4",
     "prop-types": "^15.7.2",
-    "react": "^16.7.0",
-    "react-cookie": "^4.0.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1",
-    "update": "^0.7.4"
+    "react-scripts": "^3.3.1",
+    "update": "^0.7.4",
+    "validator": "^12.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set port=3001 && react-scripts start",
     "build": "react-scripts build",
+    "server": "live-server --browser=firefox",
+    "watch:sass": "node-sass src/sass_files/main.scss src/sass_files/style.css -w",
+    "compile:sass": "node-sass src/sass_files/_main.scss src/sass_files/style.css --output-style compressed",
+    "dev-server": "npm-run-all --parallel watch:sass server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
