--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.3.1",
@@ -28,7 +29,7 @@
   "scripts": {
     "start": "set port=3001 && react-scripts start",
     "build": "react-scripts build",
-    "server": "live-server --browser=firefox",
+    "server": "",
     "watch:sass": "node-sass src/sass_files/main.scss src/sass_files/style.css -w",
     "compile:sass": "node-sass src/sass_files/_main.scss src/sass_files/style.css --output-style compressed",
     "dev-server": "npm-run-all --parallel watch:sass server",
