--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.3.1",
+    "reactjs-localstorage": "0.0.8",
     "update": "^0.7.4",
     "validator": "^12.2.0"
   },
