--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.0.1",
     "react-icons": "^3.9.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
