--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-share": "^4.1.0",
     "reactjs-localstorage": "0.0.8",
     "update": "^0.7.4",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "set port=3001 && react-scripts start",
